Stop SpellChecker from adding marker when checking range is modified

This patch makes SpellChecker not to add spelling markers if the
checking range has been modified. It also modifies layout test
editing/spelling/spellcheck-async-mutation.html, which is supposed
to test behavior in such case but was incorrectly designed.

BUG=693795
TEST=editing/spelling/spellcheck-async-mutation.html

Review-Url: https://codereview.chromium.org/2711113004
Cr-Commit-Position: refs/heads/master@{#452719}

Former-commit-id: e7f1cb881be7f52498d58b21ea855a5db487a515